local_setup/kubernetes/deployment.yaml
---
# Step 3: Deploy ModelBazaar with the Service Account
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modelbazaar
spec:
  selector:
    matchLabels:
      app: modelbazaar
  template:
    metadata:
      labels:
        app: modelbazaar
    spec:
      serviceAccountName: modelbazaar-sa # Assign ServiceAccount here
      hostNetwork: true
      hostPID: true
      hostIPC: true
      imagePullSecrets:
        - name: docker-credentials-secret
      containers:
        - name: modelbazaar
          image: "thirdaiplatform.azurecr.io/thirdai_platform_local-dev:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /api/v2/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "1"
              memory: "1000Mi"
            limits:
              cpu: "1"
              memory: "1500Mi"
          volumeMounts:
            - name: shared-modelbazaar
              mountPath: /model_bazaar
            - name: jobs-volume
              mountPath: /opt/model_bazaar/jobs
          securityContext:
            privileged: true
            runAsUser: 0
            allowPrivilegeEscalation: true
            capabilities:
              add: ["ALL"]
      volumes:
        - name: shared-modelbazaar
          persistentVolumeClaim:
            claimName: modelbazaar-local-pvc
        - name: jobs-volume
          hostPath:
            path: /opt/model_bazaar/jobs
            type: DirectoryOrCreate
